force-app/main/default/objects/Trip_add_on__c/Trip_add_on__c.object-meta.xml
<CustomObject>
    <label>Trip add-on</label>
    <nameField>
        <label>Trip add-on Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trip add-on</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>