force-app/main/default/objects/Trip_add_on__c/fields/Itinerary__c.field-meta.xml
<CustomField>
    <fullName>Itinerary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Itinerary</label>
    <referenceTo>Itinerary__c</referenceTo>
    <relationshipLabel>Trip add-on</relationshipLabel>
    <relationshipName>Trip_add_on</relationshipName>
    <type>Lookup</type>
</CustomField>