force-app/main/default/objects/Trip_add_on__c/recordTypes/Arrive.recordType-meta.xml
<RecordType>
    <fullName>Arrive</fullName>
    <active>true</active>
    <label>Arrive</label>
</RecordType>