force-app/main/default/objects/Trip_add_on__c/recordTypes/Arrive_Early.recordType-meta.xml
<RecordType>
    <fullName>Arrive_Early</fullName>
    <active>true</active>
    <label>Arrive Early</label>
</RecordType>