force-app/main/default/objects/Trip_add_on__c/recordTypes/Behind.recordType-meta.xml
<RecordType>
    <fullName>Behind</fullName>
    <active>true</active>
    <label>Behind</label>
</RecordType>