force-app/main/default/objects/Trip_add_on__c/recordTypes/Early_Stay.recordType-meta.xml
<RecordType>
    <fullName>Early_Stay</fullName>
    <active>true</active>
    <label>Early/Stay</label>
</RecordType>