force-app/main/default/objects/Trip_add_on__c/recordTypes/Meals.recordType-meta.xml
<RecordType>
    <fullName>Meals</fullName>
    <active>true</active>
    <label>Meals</label>
</RecordType>