force-app/main/default/objects/Trip_add_on__c/recordTypes/Security_Device.recordType-meta.xml
<RecordType>
    <fullName>Security_Device</fullName>
    <active>true</active>
    <label>Security Device</label>
</RecordType>