force-app/main/default/objects/Trip_add_on__c/recordTypes/Stay_Behind.recordType-meta.xml
<RecordType>
    <fullName>Stay_Behind</fullName>
    <active>true</active>
    <label>Stay Behind</label>
</RecordType>